# zdppy_requests

./: .gitignore  README.md  build.sh  pyproject.toml  test.py
examples/: 01发送请求.py  02注册服务.py  03访问百度网站.py  04各种请求方式.py  05无参数的GET请求.py  06带参数的GET请求.py  07请求头包含参数.py  08发送表单数据.py  09发送JSON数据.py  10发送文件数据.py  11获取二进制数据.py  12设置headers.py  13获取cookie.py  14获取cookie.py  15session会话保存.py  16关闭证书访问.py  17设置证书.py  18设置代理.py  19需要认证的代理.py  20设置 sockets代理.py  21超时设置.py  22网站认证.py  23异常处理.py
examples/huoke/: z01_登录.py
examples/sec/: z01_sec_receive.py
examples/zdpgo_gin/: z01_hello.py  z02_path_router.py  z03_get_param.py  z04_post_param.py  z05_get_post_param.py  z06_upload.py  z07_upload_many.py  z08_router_group.py  z09_middleware.py  z15_json_param.py  z16_any_method_path_param.py  z17_cookie.py  z18_cookie_session.py  z19_redis_session.py  z20_basic_auth.py  z21_group_basic_auth.py
examples/zdppy_restapi/: z01_测试crud接口.py
zdppy_requests/: __init__.py  _internal_utils.py  adapters.py  api.py  auth.py  certs.py  compat.py  cookie.py  cookie1.py  exceptions.py  exceptions1.py  help.py  models.py  packages.py  sessions.py  status_codes.py  structures.py  user_agent.py  utils.py  zdppy_requests.py
zdppy_requests/examples/zdpgo_gin/: z06_upload.py  z07_upload_many.py  z08_router_group.py  z09_middleware.py  z18_cookie_session.py
zdppy_requests/examples/zdppy_requests/: z01_hello.py
zdppy_requests/libs/: __init__.py
zdppy_requests/libs/certifi/: core.py
zdppy_requests/libs/requests/: adapters.py  compat.py  packages.py  (+2 more)
zdppy_requests/urllib3/: __init__.py
(+6 files in other folders)
