[tool.poetry]
name = "zdppy_requests"
version = "0.1.0"
description = ""
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
zdppy-log = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
