[tool.poetry]
name = "zdppy_requests"
version = "0.1.1"
description = "发送HTTP请求的库"
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
