[tool.poetry]
name = "zdppy-requests"
version = "0.1.3"
description = ""
authors = ["zhangdapeng520 <1156956636@qq.com>"]
readme = "README.md"
packages = [{include = "zdppy_requests"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
